--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
             <p class="settings-modal__section__description">Any revealed hints must be used in subsequent guesses</p>
           </div>
           <label class="switch">
-            <input type="checkbox">
+            <input class="hard-mode-checkbox" type="checkbox">
             <span class="slider"></span>
           </label>
         </div>
@@ -353,7 +353,7 @@
             <h1 class="settings-modal__section__title">Dark Theme</h1>
           </div>
           <label class="switch">
-            <input type="checkbox">
+            <input class="dark-theme-checkbox" type="checkbox">
             <span class="slider"></span>
           </label>
         </div>
@@ -363,7 +363,7 @@
             <p class="settings-modal__section__description">For improved color vision</p>
           </div>
           <label class="switch">
-            <input type="checkbox">
+            <input class="high-contrast-mode-checkbox" type="checkbox">
             <span class="slider"></span>
           </label>
         </div>
