--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="header__icon-container__1">
           <ion-icon class="header__icon header__rules-icon" name="help-circle-outline"></ion-icon>
         </div>
-        <h1 class="header__title">Wordle</h1>
+        <h1 class="header__title">NERDLE WERDLE</h1>
         <div class="header__icon-container__2">
           <ion-icon class="header__icon header__statistics-icon" name="stats-chart-outline"></ion-icon>
           <ion-icon class="header__icon header__settings-icon" name="settings-outline"></ion-icon>
@@ -444,7 +444,7 @@
         <div class="statistics-modal__close-icon__container">
           <ion-icon class="statistics-modal__close-icon" name="close-outline"></ion-icon>
         </div>
-        <h1 class="statistics-modal__title">STATISTICS</h1>
+        <h1 class="statistics-modal__title">NERDLE STATISTICS</h1>
         <div class="statistics-modal__stats-container">
           <div class="statistics-modal__stat-box">
             <p class="statistics-modal__stat statistics-modal__games-played">0</p>
