--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
             <h1 class="settings-modal__section__title">Hard Mode</h1>
             <p class="settings-modal__section__description">Any revealed hints must be used in subsequent guesses</p>
           </div>
-          <label class="switch">
+          <label class="switch hard-mode-switch">
             <input class="hard-mode-checkbox" type="checkbox">
             <span class="slider"></span>
           </label>
