fix color for guess distribution bar

--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
     </div>
   </section>
 
-  <section class="statistics-modal__container">
+  <section class="statistics-modal__container invisible">
     <div class="statistics-modal">
       <div class="statistics-modal__close-icon__container">
         <ion-icon class="statistics-modal__close-icon" name="close-outline"></ion-icon>
