fix tile flip glitch for safari

--- a/index.html
+++ b/index.html
@@ -29,255 +29,50 @@
       <div class="message-container">
       </div>
       <div class="board__row board__row__1">
-        <div class="board__tile__container">
-          <div class="board__tile">
-            <div class="front">
-            </div>
-            <div class="back">
-            </div>
-          </div>
-        </div>
-        <div class="board__tile__container">
-          <div class="board__tile">
-            <div class="front">
-            </div>
-            <div class="back">
-            </div>
-          </div>
-        </div>
-        <div class="board__tile__container">
-          <div class="board__tile">
-            <div class="front">
-            </div>
-            <div class="back">
-            </div>
-          </div>
-        </div>
-        <div class="board__tile__container">
-          <div class="board__tile">
-            <div class="front">
-            </div>
-            <div class="back">
-            </div>
-          </div>
-        </div>
-        <div class="board__tile__container">
-          <div class="board__tile">
-            <div class="front">
-            </div>
-            <div class="back">
-            </div>
-          </div>
-        </div>
+        <div class="board__tile"></div>
+        <div class="board__tile"></div>
+        <div class="board__tile"></div>
+        <div class="board__tile"></div>
+        <div class="board__tile"></div>
       </div>
       <div class="board__row board__row__2">
-        <div class="board__tile__container">
-          <div class="board__tile">
-            <div class="front">
-            </div>
-            <div class="back">
-            </div>
-          </div>
-        </div>
-        <div class="board__tile__container">
-          <div class="board__tile">
-            <div class="front">
-            </div>
-            <div class="back">
-            </div>
-          </div>
-        </div>
-        <div class="board__tile__container">
-          <div class="board__tile">
-            <div class="front">
-            </div>
-            <div class="back">
-            </div>
-          </div>
-        </div>
-        <div class="board__tile__container">
-          <div class="board__tile">
-            <div class="front">
-            </div>
-            <div class="back">
-            </div>
-          </div>
-        </div>
-        <div class="board__tile__container">
-          <div class="board__tile">
-            <div class="front">
-            </div>
-            <div class="back">
-            </div>
-          </div>
-        </div>
+        <div class="board__tile"></div>
+        <div class="board__tile"></div>
+        <div class="board__tile"></div>
+        <div class="board__tile"></div>
+        <div class="board__tile"></div>
       </div>
       <div class="board__row board__row__3">
-        <div class="board__tile__container">
-          <div class="board__tile">
-            <div class="front">
-            </div>
-            <div class="back">
-            </div>
-          </div>
-        </div>
-        <div class="board__tile__container">
-          <div class="board__tile">
-            <div class="front">
-            </div>
-            <div class="back">
-            </div>
-          </div>
-        </div>
-        <div class="board__tile__container">
-          <div class="board__tile">
-            <div class="front">
-            </div>
-            <div class="back">
-            </div>
-          </div>
-        </div>
-        <div class="board__tile__container">
-          <div class="board__tile">
-            <div class="front">
-            </div>
-            <div class="back">
-            </div>
-          </div>
-        </div>
-        <div class="board__tile__container">
-          <div class="board__tile">
-            <div class="front">
-            </div>
-            <div class="back">
-            </div>
-          </div>
-        </div>
+        <div class="board__tile"></div>
+        <div class="board__tile"></div>
+        <div class="board__tile"></div>
+        <div class="board__tile"></div>
+        <div class="board__tile"></div>
       </div>
       <div class="board__row board__row__4">
-        <div class="board__tile__container">
-          <div class="board__tile">
-            <div class="front">
-            </div>
-            <div class="back">
-            </div>
-          </div>
-        </div>
-        <div class="board__tile__container">
-          <div class="board__tile">
-            <div class="front">
-            </div>
-            <div class="back">
-            </div>
-          </div>
-        </div>
-        <div class="board__tile__container">
-          <div class="board__tile">
-            <div class="front">
-            </div>
-            <div class="back">
-            </div>
-          </div>
-        </div>
-        <div class="board__tile__container">
-          <div class="board__tile">
-            <div class="front">
-            </div>
-            <div class="back">
-            </div>
-          </div>
-        </div>
-        <div class="board__tile__container">
-          <div class="board__tile">
-            <div class="front">
-            </div>
-            <div class="back">
-            </div>
-          </div>
-        </div>
+        <div class="board__tile"></div>
+        <div class="board__tile"></div>
+        <div class="board__tile"></div>
+        <div class="board__tile"></div>
+        <div class="board__tile"></div>
       </div>
       <div class="board__row board__row__5">
-        <div class="board__tile__container">
-          <div class="board__tile">
-            <div class="front">
-            </div>
-            <div class="back">
-            </div>
-          </div>
-        </div>
-        <div class="board__tile__container">
-          <div class="board__tile">
-            <div class="front">
-            </div>
-            <div class="back">
-            </div>
-          </div>
-        </div>
-        <div class="board__tile__container">
-          <div class="board__tile">
-            <div class="front">
-            </div>
-            <div class="back">
-            </div>
-          </div>
-        </div>
-        <div class="board__tile__container">
-          <div class="board__tile">
-            <div class="front">
-            </div>
-            <div class="back">
-            </div>
-          </div>
-        </div>
-        <div class="board__tile__container">
-          <div class="board__tile">
-            <div class="front">
-            </div>
-            <div class="back">
-            </div>
-          </div>
-        </div>
+        <div class="board__tile"></div>
+        <div class="board__tile"></div>
+        <div class="board__tile"></div>
+        <div class="board__tile"></div>
+        <div class="board__tile"></div>
       </div>
       <div class="board__row board__row__6">
-        <div class="board__tile__container">
-          <div class="board__tile">
-            <div class="front">
-            </div>
-            <div class="back">
-            </div>
-          </div>
+        <div class="board__tile">
         </div>
-        <div class="board__tile__container">
-          <div class="board__tile">
-            <div class="front">
-            </div>
-            <div class="back">
-            </div>
-          </div>
+        <div class="board__tile">
         </div>
-        <div class="board__tile__container">
-          <div class="board__tile">
-            <div class="front">
-            </div>
-            <div class="back">
-            </div>
-          </div>
+        <div class="board__tile">
         </div>
-        <div class="board__tile__container">
-          <div class="board__tile">
-            <div class="front">
-            </div>
-            <div class="back">
-            </div>
-          </div>
+        <div class="board__tile">
         </div>
-        <div class="board__tile__container">
-          <div class="board__tile">
-            <div class="front">
-            </div>
-            <div class="back">
-            </div>
-          </div>
+        <div class="board__tile">
         </div>
       </div>
     </div>
@@ -494,7 +289,7 @@
           </div>
         </div>
       </div>
-      <div class="statistics-modal__share-and-timer-container">
+      <div class="statistics-modal__share-and-timer-container hidden">
         <div class="statistics-modal__timer-container">
           <p class="statistics-modal__next-werdle">NEXT WERDLE</p>
           <div class="statistics-modal__time"></div>
