fix example div flips

--- a/index.html
+++ b/index.html
@@ -171,16 +171,11 @@
         <h2>Examples</h2>
         <div class="example">
           <div class="example__div-container">
-            <div class="example__div-flip">
-              <div class="example__div">
-                <div class="example__front"></div>
-                <div class="example__back example__back--green">B</div>
-              </div>
-            </div>
-            <div class="example__div front-border">E</div>
-            <div class="example__div front-border">A</div>
-            <div class="example__div front-border">C</div>
-            <div class="example__div front-border">H</div>
+            <div class="example__flip">O</div>
+            <div class="example__div">C</div>
+            <div class="example__div">E</div>
+            <div class="example__div">A</div>
+            <div class="example__div">N</div>
           </div>
 
           <p class="example__text">You know what this means you <strong>NERDLE</strong></p>
@@ -188,16 +183,11 @@
 
         <div class="example">
           <div class="example__div-container">
-            <div class="example__div front-border">O</div>
-            <div class="example__div-flip">
-              <div class="example__div">
-                <div class="example__front"></div>
-                <div class="example__back example__back--yellow">C</div>
-              </div>
-            </div>
-            <div class="example__div front-border">E</div>
-            <div class="example__div front-border">A</div>
-            <div class="example__div front-border">N</div>
+            <div class="example__div">B</div>
+            <div class="example__div">E</div>
+            <div class="example__flip">A</div>
+            <div class="example__div">C</div>
+            <div class="example__div">H</div>
           </div>
 
           <p class="example__text">You know what this means you <strong>NERDLE</strong></p>
@@ -205,16 +195,11 @@
 
         <div class="example">
           <div class="example__div-container">
-            <div class="example__div front-border">P</div>
-            <div class="example__div front-border">O</div>
-            <div class="example__div front-border">I</div>
-            <div class="example__div-flip">
-              <div class="example__div">
-                <div class="example__front"></div>
-                <div class="example__back example__back--grey">N</div>
-              </div>
-            </div>
-            <div class="example__div front-border">T</div>
+            <div class="example__div">P</div>
+            <div class="example__div">O</div>
+            <div class="example__div">I</div>
+            <div class="example__div">N</div>
+            <div class="example__flip">T</div>
           </div>
 
           <p class="example__text">You know what this means you <strong>NERDLE</strong></p>
