fix reload when time expires

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
           </div>
         </div>
       </div>
-      <div class="statistics-modal__share-and-timer-container">
+      <div class="statistics-modal__share-and-timer-container hidden">
         <div class="statistics-modal__timer-container">
           <p class="statistics-modal__next-werdle">NEXT WERDLE</p>
           <div class="statistics-modal__time"></div>
