--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" type="image/png" href="img/favicon.png">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="querries.css">
-  <title>Document</title>
+  <title>NERDLE WERDLE</title>
 </head>
 
 <body>
