--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         <ion-icon class="rules-modal__close-icon" name="close-outline"></ion-icon>
       </div>
       <div class="rules-modal__intro">
-        <p class="rules-modal__intro__text">Guess the <strong>WERDLE</strong> in six tries you
+        <p class="rules-modal__intro__text">Guess the <strong>WERDLE</strong> in six tries
           <strong>NERDLE</strong>.
         </p>
         <p class="rules-modal__intro__text">Each guess must be a valid five-letter word. Hit the enter button to
@@ -172,38 +172,38 @@
         <h2>Examples</h2>
         <div class="example">
           <div class="example__div-container">
-            <div class="example__flip">O</div>
-            <div class="example__div">C</div>
-            <div class="example__div">E</div>
+            <div class="example__flip">P</div>
+            <div class="example__div">L</div>
             <div class="example__div">A</div>
-            <div class="example__div">N</div>
-          </div>
-
-          <p class="example__text">You know what this means you <strong>NERDLE</strong></p>
-        </div>
-
-        <div class="example">
-          <div class="example__div-container">
-            <div class="example__div">B</div>
-            <div class="example__div">E</div>
-            <div class="example__flip">A</div>
-            <div class="example__div">C</div>
-            <div class="example__div">H</div>
-          </div>
-
-          <p class="example__text">You know what this means you <strong>NERDLE</strong></p>
-        </div>
-
-        <div class="example">
-          <div class="example__div-container">
-            <div class="example__div">P</div>
-            <div class="example__div">O</div>
             <div class="example__div">I</div>
             <div class="example__div">N</div>
-            <div class="example__flip">T</div>
           </div>
 
-          <p class="example__text">You know what this means you <strong>NERDLE</strong></p>
+          <p class="example__text">You know what this means <strong>NERDLE</strong></p>
+        </div>
+
+        <div class="example">
+          <div class="example__div-container">
+            <div class="example__div">C</div>
+            <div class="example__div">R</div>
+            <div class="example__flip">A</div>
+            <div class="example__div">Z</div>
+            <div class="example__div">Y</div>
+          </div>
+
+          <p class="example__text">You know what this means <strong>NERDLE</strong></p>
+        </div>
+
+        <div class="example">
+          <div class="example__div-container">
+            <div class="example__div">F</div>
+            <div class="example__div">L</div>
+            <div class="example__div">A</div>
+            <div class="example__div">R</div>
+            <div class="example__flip">E</div>
+          </div>
+
+          <p class="example__text">You know what this means <strong>NERDLE</strong></p>
         </div>
       </div>
       <p class="rules__modal__footer">New WERDLE every day for NERDLES</p>
