--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="shortcut icon" type="image/png" href="img/favicon.png">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="querries.css">
-  <title>NERDLE WERDLE</title>
+  <title>BABY WERDLE</title>
 </head>
 
 <body>
@@ -17,7 +17,7 @@
       <div class="header__icon-container__1">
         <ion-icon class="header__icon header__rules-icon" name="help-circle-outline"></ion-icon>
       </div>
-      <h1 class="header__title">NERDLE WERDLE</h1>
+      <h1 class="header__title">BABY WERDLE</h1>
       <div class="header__icon-container__2">
         <ion-icon class="header__icon header__statistics-icon" name="stats-chart-outline"></ion-icon>
         <ion-icon class="header__icon header__settings-icon" name="settings-outline"></ion-icon>
@@ -161,7 +161,7 @@
       </div>
       <div class="rules-modal__intro">
         <p class="rules-modal__intro__text">Guess the <strong>WERDLE</strong> in six tries
-          <strong>NERDLE</strong>.
+          <strong>Baby</strong>.
         </p>
         <p class="rules-modal__intro__text">Each guess must be a valid five-letter word. Hit the enter button to
           submit.</p>
@@ -179,7 +179,7 @@
             <div class="example__div">N</div>
           </div>
 
-          <p class="example__text">You know what this means <strong>NERDLE</strong></p>
+          <p class="example__text">The letter is in the right spot <strong>Baby</strong></p>
         </div>
 
         <div class="example">
@@ -191,7 +191,7 @@
             <div class="example__div">Y</div>
           </div>
 
-          <p class="example__text">You know what this means <strong>NERDLE</strong></p>
+          <p class="example__text">The letter is in the wrong spot <strong>Baby</strong></p>
         </div>
 
         <div class="example">
@@ -203,10 +203,10 @@
             <div class="example__flip">E</div>
           </div>
 
-          <p class="example__text">You know what this means <strong>NERDLE</strong></p>
+          <p class="example__text">The letter is not in the word <strong>Baby</strong></p>
         </div>
       </div>
-      <p class="rules__modal__footer">New WERDLE every day for NERDLES</p>
+      <p class="rules__modal__footer">New WERDLE every day for my baby</p>
     </div>
   </section>
 
@@ -215,7 +215,7 @@
       <div class="statistics-modal__close-icon__container">
         <ion-icon class="statistics-modal__close-icon" name="close-outline"></ion-icon>
       </div>
-      <h1 class="statistics-modal__title">NERDLE STATISTICS</h1>
+      <h1 class="statistics-modal__title">WERDLE STATISTICS</h1>
       <div class="statistics-modal__stats-container">
         <div class="statistics-modal__stat-box">
           <p class="statistics-modal__stat statistics-modal__games-played">0</p>
